--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "fitty": "^2.3.3",
     "swiper": "^6.5.4",
     "vue": "^2.6.12",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
