--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,50 +1,87 @@
-version: 2.1
+# Ruby CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-ruby/ for more details
+#
+version: 2
 jobs:
   build:
-    working_directory: ~/my-app
     docker:
+      # specify the version you desire here
+      # ruby2.5.1を使ったアプリのため
       - image: circleci/ruby:2.6.4-node-browsers
         environment:
-          BUNDLE_RETRY: 3
-          BUNDLE_PATH: vendor/bundle
-          BUNDLER_VERSION: 2.2.15 
-          DATABASE_URL: postgres://postgres:password@localhost:5432/myapp_test
-          RAILS_ENV: test
-      - image: circleci/postgres:11-alpine
+#  ①注意！！ bundlerのバージョンが2.0.1以上だと、bundle installに失敗します。ここに環境として指定します。
+          - BUNDLER_VERSION: 2.2.15
+#  ②注意！！ circleCIは仮想環境を構築するので、そのときに使うデータベースを指定する必要があります。
+          - RAILS_ENV: 'test'
+      # Mysqlのバージョン5.6で動かしていたため、5.6を指定
+      - image: circleci/mysql:5.6
+        environment:
+          - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
+          - MYSQL_ROOT_HOST: '%'
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    working_directory: ~/repo
+
     steps:
       - checkout
+
+      # Download and cache dependencies
       - restore_cache:
           keys:
-            - my-app-bundle-v1-{{ checksum "Gemfile.lock" }}
-            - my-app-bundle-v1-
+            - v1-dependencies-{{ checksum "Gemfile.lock" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
       - run:
-          name: Bundler install
+          name: install dependencies
           command: |
-            gem update --system
+# ①bundler2.0.1以降のものを使っているのであれば、環境変数と合わせて指定する必要があります。
             gem install bundler -v 2.2.15
-      - run:
-          name: Bundle Install
-          command: bundle check || bundle install
+            bundle install --jobs=4 --retry=3 --path vendor/bundle
+
       - save_cache:
-          key: my-app-bundle-v1-{{ checksum "Gemfile.lock" }}
           paths:
-            - vendor/bundle
-      - restore_cache:
-          keys:
-            - rails-demo-yarn-{{ checksum "yarn.lock" }}
-            - rails-demo-yarn-
+            - ./vendor/bundle
+          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+
+# ②ちょっと無理やりですが、database.ymlとdatabase.yml.ciを入れ替える記述です。
+      - run: mv config/database.yml.ci config/database.yml 
+
+      # Database setup
+      - run: bundle exec rake db:create
+      - run: bundle exec rake db:schema:load
+
+# rubocopを走らせる記述です。
       - run:
-          name: Yarnをinstall
-          command: yarn install --cache-folder ~/.cache/yarn
+          name: Rubocop
+          command: bundle exec rubocop
+
+# rspecを走らせる記述です。
+      # run tests!
       - run:
-          name: Wait for DB
-          command: dockerize -wait tcp://127.0.0.1:5432 -timeout 1m
-      - run:
-          name: Database setup
-          command: bin/rails db:create db:schema:load --trace
-      - run: bundle exec bin/webpack
-      - run:
-          name: execute rspec
-          command: bundle exec rspec
+          name: run tests
+          command: |
+            mkdir /tmp/test-results
+            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
+              circleci tests split --split-by=timings)"
+
+
+# ③ここでRspecJunitFormatterというgemをインストールしていないとエラーになります。gemfileに記述しましょう。
+            bundle exec rspec \
+              --format progress \
+              --format RspecJunitFormatter \
+              --out /tmp/test-results/rspec.xml \
+              --format progress \
+              $TEST_FILES
+
+      # collect reports
       - store_test_results:
           path: /tmp/test-results
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: test-results
