--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,10 +42,10 @@ jobs:
         command: |
            bundle exec rake db:create
            bundle exec rake db:schema:load
-           
+
     - run:
           name: Rubocop
-          command: bundle exec rubocop
+          command: rubocop
 
     # run tests!
     - run:
