--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: "m5jt|uKP(kV7"
+  password: password
 
 development:
   <<: *default
@@ -25,8 +25,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: Study_quest_test
+  database: mysql_test
   host: test-db
+  password: "m5jt|uKP(kV7"
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
