--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   db:
     image: mysql:5.6
     environment:
-      MYSQL_ROOT_PASSWORD: "m5jt|uKP(kV7"
-      MYSQL_PASSWORD: "m5jt|uKP(kV7"
-      MYSQL_DATABASE: root
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_PASSWORD: password
+      MYSQL_DATABASE: Study_quest_development
     volumes:
       - mysql-data:/var/lib/mysql    #データの永続化のために必要
     ports:
