--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
       environment:
         - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
         - MYSQL_ROOT_HOST: '127.0.0.1'
+    - image: selenium/standalone-chrome-debug:latest
+        name: chrome
 
     working_directory: ~/Study_quest  #自身のアプリディレクトリ名を設定  
 
