--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     tty: true          #コンテナ上でbinding.pryするために必要
     stdin_open: true   #コンテナ上でbinding.pryするために必要
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: /bin/sh -c "rm -f /myproject/tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myproject    #ローカルのディレクトリをコンテナ上にマウント
       - bundle:/usr/local/bundle    #bundle installした後buildし直さなくてよくなる
@@ -35,6 +35,7 @@ services:
       - db
     environment: #以下追記
       - "SELENIUM_DRIVER_URL=http://selenium_chrome:4444/wd/hub"
+      
   
   chrome:    #Chromeでのテスト実行用コンテナ
     image: selenium/standalone-chrome    #Chromeがインストールされたイメージ
