--- a/config/database.yml
+++ b/config/database.yml
@@ -55,3 +55,4 @@ production:
   username: <%= Rails.application.credentials.db[:username] %>
   password: <%= Rails.application.credentials.db[:password] %>
   socket: <%= Rails.application.credentials.db[:socket] %>
+  host: db
